istio-resources/application-set/vd-traffic/current-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: helloworld-crosscluster-gateways
  namespace: helloworld
spec:
  gateways:
  - istio-system/ingressgateway
  hosts:
  - helloworld.global
  http:
  - match:
    - sourceLabels:
        app: istio-ingressgateway
        istio: ingressgateway
      uri:
        prefix: /hello
    name: helloworld.helloworld.cluster.local
    route:
    - destination:
        host: helloworld.global
        port:
          number: 5000
        subset: v1
      weight: 100
    - destination:
        host: helloworld.global
        port:
          number: 5000
        subset: v2
      weight: 0
