istio-resources/application-set/vd-traffic/dr1-bck.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: helloworld-global-virtual-dest
  namespace: istio-system
spec:
  exportTo:
  - helloworld
  - istio-system
  host: helloworld.global
  subsets:
  - labels:
      version: v1
    name: v1
    trafficPolicy:
      tls:
        mode: ISTIO_MUTUAL
        sni: outbound_.5000_.v2_.helloworld.global
  - labels:
      version: v2
    name: v2
    trafficPolicy:
      tls:
        mode: ISTIO_MUTUAL
        sni: outbound_.5000_.v2_.helloworld.global
