istio-resources/application-set/vd-traffic/dr2.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: helloworld-global-virtual-dest
  namespace: istio-system
spec:
  exportTo:
  - helloworld
  - istio-system
  host: helloworld.global
  subsets:
  - labels:
      version: v1
    name: v1
  - labels:
      version: v2
    name: v2
  trafficPolicy:
    portLevelSettings:
    - port:
        number: 5000
      tls:
        mode: ISTIO_MUTUAL
        subjectAltNames:
        - spiffe://cluster.local/ns/helloworld/sa/helloworld
