istio-resources/application-set/vd-traffic/envoyfilter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: eastwestgateway-helloworld
  namespace: istio-system
spec:
  configPatches:
  - applyTo: NETWORK_FILTER
    match:
      context: GATEWAY
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.tcp_proxy
          sni: outbound_.5000_._.helloworld.global
        portNumber: 15443
    patch:
      operation: MERGE
      value:
        name: envoy.filters.network.tcp_proxy
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          cluster: outbound_.5000_._.helloworld.helloworld.svc.cluster.local
  workloadSelector:
    labels:
      app: istio-ingressgateway
      istio: eastwestgateway
