istio-resources/application-set/vd-traffic/se.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: vd-productpage-global-bookinfo
  namespace: bookinfo-frontends
spec:
  exportTo:
  - helloworld
  - istio-system
  hosts:
  - helloworld.global
  location: MESH_INTERNAL
  ports:
  - name: http-9080
    number: 5000
    protocol: HTTP
    targetPort: 5000
  resolution: DNS
  subjectAltNames:
  - spiffe://cluster1/ns/bookinfo-frontends/sa/bookinfo-productpage
  - spiffe://cluster2/ns/bookinfo-frontends/sa/bookinfo-productpage
  workloadSelector:
    labels:
      app: helloworld
