istio-resources/application-set/vd-traffic/virtualService.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: helloworld-crosscluster-gateways
  namespace: istio-system
spec:
  exportTo:
  - .
  gateways:
  - ingressgateway
  hosts:
  - 'helloworld.global'
  http:
  - match:
    - sourceLabels:
        app: istio-ingressgateway
        istio: ingressgateway
      uri:
        prefix: /hello
    name: helloworld.helloworld.cluster.local
    route:
    - destination:
        host: helloworld.global
        port:
          number: 5000
